    - debian/control.in/libc-udeb: New file
    - debian/packages.d/libc-udeb.mk: New file
    - debian/rules: Call udeb machinery.
    - debian/rules.d/control.mk: Call udeb machinery.

    - debian/sysdeps/build-options.mk: Strip libc on alpha

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/patches/0list: disable ip6-fix.dpatch. Closes: #165287

 -- Jeff Bailey <jbailey@nisa.net>  Fri, 18 Oct 2002 11:27:07 -0400

glibc (2.3.1-1) unstable; urgency=low

  * This is the "twilight" release...

  * Jeff Bailey <jbailey@nisa.net>
    - Upgrade tarballs to 2.3.1
    - version: Update to 2.3.1

    - debian/sysdeps/linux.mk: Do not build optimized libraries
    - debian/rules.d/control.mk: Likewise

    - debian/control.in/main: Require binutils 2.13.90.0.10-1 for ppc

    - debian/patches/elf-machine-rela-mips.dpatch: New file
    - debian/patches/0list: Update accordingly.

    - debian/rules: Use -O on i386.  This should go somewhere else,
    but I want to get this release out.

  * XXX Below here was during the 2.3 development, and never released.

  * Jeff Bailey <jbailey@nisa.net>
    - Upgrade tarballs to 2.3
    - version: Update to 2.3

    - debian/patches/hppa-data-start.dpatch: Remove, incorporated upstream
    - debian/patches/various-lsb-fixes.dpatch: Remove, incorporated upstream

    - debian/patches/0list: adjust accordingly
                            Also, prune ia64-reloc-none from the list.
			    I can't tell from the code snippet if this
			    has been incorporated or not.

    - .cvsignore: Add the stamp directories

    - debian/rules: Don't put CFLAGS in configparms, resolves ldconfig
      miscompile on i386

    - debian/rules: Add freebsd-i386 support
    - debian/rules.d/control.mk: Add freebsd-i386 support
    - debian/sysdeps/freebsd.mk: New file to add freebsd-i386 support
    - debian/sysdeps/paths.mk: Add freebsd-i386 support
    - debian/sysdeps/soname.mk: Add freebsd-i386 support
