@@ -17,6 +17,7 @@ glibc (2.3.1-2) unstable; urgency=low
 
   * GOTO Masanori <gotom@debian.or.jp>
     - debian/patches/0list: disable ip6-fix.dpatch. Closes: #165287
+    - debian/packages.d/libc-udeb.mk: Clean up and fix indent crap.
 
  -- Jeff Bailey <jbailey@nisa.net>  Fri, 18 Oct 2002 11:27:07 -0400
 
